--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+    <!-- header code start here -->
+    <header class="influencer-header">
+        <nav class="influencer-menu">
+            <div class="logo">
+                <h1>Influencer products</h1>
+            </div>
+
+            <div class="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign Up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><i class="fas fa-search"></i></a></li>
+                <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+            </div>
+        </nav>
+
+        <div class="header-content">
+            <div class="header-text">
+                <h2 class="header-title">Start your Journey as Influencer</h2>
+                <p class="header-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem, porro saepe praesentium deserunt rerum!</p>
+                <button class="btn"></button>
+            </div>
+            <div class="header-text"></div>
+        </div>
+
+    </header>
+    <!-- header code end here -->
     
+    <main>
+        <section class="product-card">
+
+        </section>
+    </main>
+
+
+    <!-- footer code start here -->
+    <footer class="influencer-footer">
+
+    </footer>
+    <!-- footer code end here -->
 </body>
 </html>
