nav, header, multi-vendor, footer done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="influencer-menu">
             <div class="logo">
-                <h1>Influencer products</h1>
+                <h2>Influencer products</h2>
             </div>
 
             <div class="menu">
@@ -40,17 +40,34 @@
 
         <div class="header-content">
             <div class="header-text">
-                <h2 class="header-title">Start your Journey as Influencer</h2>
-                <p class="header-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem,
-                    porro saepe praesentium deserunt rerum!</p>
-                <button class="btn"></button>
+                <div class="all-text">
+                    <h1 class="header-title">Start your Journey as Influencer</h1>
+                    <p class="header-paragraph">Here we have a lot of collection to helping you being an influncer.
+                        Please, scroll down and explore everything.</p>
+                    <button class="btn">Prebook Now <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
-            <div class="header-text"></div>
+            <div class="header-image">
+                <img src="images/main-camera.png" alt="">
+            </div>
         </div>
     </header>
     <!-- header code end here -->
-
     <main>
+    <hr style="margin-top: 30px; margin-bottom: 10px;">
+    <!-- companies logo section here -->
+        <section class="multi-vendor">
+            <img src="logos/Alibaba.svg" alt="" height="31px" width="55px">
+            <img src="logos/Amazon.svg" alt="" height="31px" width="55px">
+            <img src="logos/Daraz.pk Logo.svg" alt="" height="31px" width="55px">
+            <img src="logos/Ebay.svg" alt="" height="31px" width="55px">
+            <img src="logos/Rakuten.svg" alt="" height="31px" width="55px">
+            <img src="logos/Walmart.svg" alt="" height="31px" width="55px">
+            <img src="logos/Target.svg" alt="" height="31px" width="55px">
+        </section>
+
+        <hr>
+
         <section class="product-card">
 
         </section>
@@ -59,7 +76,18 @@
 
     <!-- footer code start here -->
     <footer class="influencer-footer">
+        <div class="footer-text">
+            <h3>Influencer Products</h3>
+            <p class="copyright">Copyright 2020 influencer products</p>
+            <p>All right reserved</p>
 
+            <ul>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="far fa-basketball-ball"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </div>
     </footer>
     <!-- footer code end here -->
 </body>
