try to make responsive

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </header>
     <!-- header code end here -->
     <main>
-    <hr style="margin-top: 30px; margin-bottom: 10px;">
-    <!-- companies logo section here -->
+        <hr style="margin-top: 30px; margin-bottom: 10px;">
+        <!-- companies logo section here -->
         <section class="multi-vendor">
             <img src="logos/Alibaba.svg" alt="" height="31px" width="55px">
             <img src="logos/Amazon.svg" alt="" height="31px" width="55px">
@@ -66,9 +66,236 @@
             <img src="logos/Target.svg" alt="" height="31px" width="55px">
         </section>
 
-        <hr>
+        <hr style="margin-bottom: 30px;">
 
         <section class="product-card">
+            <h2 class="section-heading" style="text-align: center;">Popular collection</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Flex Tripod</h3>
+                        <h4>$50.48</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Flexible tripod for blogger</p>
+                        <p>Low Budget</p>
+                        <p>Best influencer gear ever</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Microphone</h3>
+                        <h4>$120.25</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.99</span>
+                        <p>Make your video</p>
+                        <p>Sounds</p>
+                        <p>More good and noiseless</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Airbuds</h3>
+                        <h4>$100.00</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Feel the sounds</p>
+                        <p>without</p>
+                        <p>any port and exeperience</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Drone</h3>
+                        <h4>$980.25</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Experience the new</p>
+                        <p>gadget</p>
+                        <p>and make your video more interesting</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Light Setup</h3>
+                        <h4>$1200.00</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Make your stdio</p>
+                        <p>more</p>
+                        <p>productive and shining</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Photoshoot set</h3>
+                        <h4>$820.40</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Click a picture</p>
+                        <p>with</p>
+                        <p>a better light</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Vlogging Camera</h3>
+                        <h4>$1800.80</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>take a big</p>
+                        <p>gear</p>
+                        <p>to shoot better quality video</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Green Screen</h3>
+                        <h4>$25.48</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Experience a</p>
+                        <p>green matt</p>
+                        <p>to better edit experience</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h3>Action Camera</h3>
+                        <h4>$380.00</h4>
+                        <span class="star-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span>4.5</span>
+                        <p>Explore everything</p>
+                        <p>from</p>
+                        <p>motoblog to under water shoot</p>
+                    </div>
+                </div>
+            </div>
+            <div class="explore-more">
+                <a href="#" class="see-more">See More <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
+
+        <section class="footer-menu">
+            <div class="footer-menu-content">
+                <div class="menu1">
+                    <h3>Get Help</h3>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">How to Buy</a></li>
+                        <li><a href="#">Returns & Refunds</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="menu2">
+                    <h3>Get to Know Us</h3>
+                    <ul>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Investor Relations</a></li>
+                        <li><a href="">Our Devices</a></li>
+                    </ul>
+                </div>
+                <div class="menu3">
+                    <img src="images/programming-hero.svg" alt="" height="150px" width="150px">
+                </div>
+                <div class="menu4">
+                    <h3>Make Money with Us</h3>
+
+                    <ul>
+                        <li><a href="">Sell products on our website</a></li>
+                        <li><a href="">Sell on our Business platform</a></li>
+                        <li><a href="">Sell apps on website</a></li>
+                        <li><a href="">Become an Affiliate</a></li>
+                        <li><a href="">Advertise Your Products</a></li>
+                        <li><a href="">Self-Publish with Us</a></li>
+                        <li><a href="">Host an Hub</a></li>
+                    </ul>
+                </div>
+            </div>
 
         </section>
     </main>
@@ -78,7 +305,7 @@
     <footer class="influencer-footer">
         <div class="footer-text">
             <h3>Influencer Products</h3>
-            <p class="copyright">Copyright 2020 influencer products</p>
+            <p class="copyright">Copyright &copy 2020 influencer products</p>
             <p>All right reserved</p>
 
             <ul>
